# rust_lox

./: .gitignore  Cargo.toml  README.md  index.html  package.json  test.lox  test2.lox  tsconfig.json  vite.config.ts
lox/src/: main.rs
lox_compiler/src/environment/: environment2.rs
lox_compiler/src/interpreter/: lox_class.rs  mod.rs
lox_compiler/src/parser/: expression.rs
node/: index.js
rs-package/lox/: Cargo.toml
rs-package/lox/src/: main.rs
rs-package/lox_compiler/: Cargo.toml
rs-package/lox_compiler/src/: lib.rs
rs-package/lox_compiler/src/environment/: environment.rs  environment_value.rs
rs-package/lox_compiler/src/interpreter/: interpreter.rs
rs-package/lox_compiler/src/parser/: parser.rs  statement.rs
rs-package/lox_compiler/src/scanner/: scanner.rs  tokens.rs
rs-package/lox_compiler/src/semantic/: mod.rs  scope_analyst.rs
rs-package/lox_napi/: Cargo.toml  package.json
rs-package/lox_napi/src/: lib.rs
rs-package/lox_wasm/: Cargo.toml
rs-package/lox_wasm/src/: lib.rs
scripts/: sync_code.js
src/: index.css  index.html  index.tsx  main.rs  utils.rs
src/environment/: environment.rs  environment_value.rs  mod.rs
src/interpreter/: interpreter.rs  lox_class.rs  lox_function.rs  lox_instance.rs  lox_return.rs  mod.rs
src/parser/: mod.rs  parser.rs  statement.rs
src/scanner/: scanner.rs  tokens.rs
src/semantic/: scope_analyst.rs
web/src/: index.css  index.tsx
web/src/page/Playground/: defaultCode.ts  index.tsx  style.css
